// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`game mutations with world as anon create game 1`] = `
{
  "data": null,
  "errors": ArrayContaining [
    Any<Object>,
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world as tester1 user create game 1`] = `
{
  "data": {
    "createGame": ObjectContaining {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world as tester1 user with hosted game set game map 1`] = `
{
  "data": {
    "setGameMap": ObjectContaining {
      "_id": Any<String>,
      "map": {
        "_id": Any<String>,
        "mapImage": {
          "_id": Any<String>,
          "chunks": ArrayContaining [
            {
              "_id": Any<String>,
              "fileId": Any<String>,
              "x": Any<Number>,
              "y": Any<Number>,
            },
          ],
          "height": Any<Number>,
          "width": Any<Number>,
        },
        "name": "Earth",
        "pixelsPerFoot": Any<Number>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world while joined in game hosted by tester1 as tester2 user join existing game 1`] = `
{
  "data": {
    "joinGame": ObjectContaining {
      "_id": Any<String>,
      "characters": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "name": "Tester1",
        },
        ObjectContaining {
          "_id": Any<String>,
          "name": "Tester2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world while joined in game hosted by tester1 as tester2 user while having joined a game game chat 1`] = `
{
  "data": {
    "gameChat": ObjectContaining {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world while joined in game hosted by tester1 as tester2 user while having joined a game leave game 1`] = `
{
  "data": {
    "leaveGame": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world while joined in game hosted by tester1 as tester2 user while having joined a game set game map permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 add fog 1`] = `
{
  "data": {
    "addFogStroke": {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 add model 1`] = `
{
  "data": {
    "addModel": {
      "_id": "08cb9011-b4b7-460b-a447-61092e862fa7",
      "models": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "model": ObjectContaining {
            "_id": "fcc3bcc0-7515-4f63-8e86-ede8b5911f72",
          },
          "wiki": ObjectContaining {
            "_id": "4b813250-f5ab-4bf7-b6e7-d7046911157d",
          },
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 add stroke 1`] = `
{
  "data": {
    "addStroke": {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 delete model 1`] = `
{
  "data": {
    "deletePositionedModel": ObjectContaining {
      "_id": Any<String>,
      "models": [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 set character order 1`] = `
{
  "data": {
    "setCharacterOrder": ObjectContaining {
      "_id": Any<String>,
      "characters": [
        ObjectContaining {
          "_id": Any<String>,
          "name": "tester2",
        },
        ObjectContaining {
          "_id": Any<String>,
          "name": "tester",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 set game map 1`] = `
{
  "data": {
    "setGameMap": ObjectContaining {
      "_id": Any<String>,
      "map": {
        "_id": Any<String>,
        "mapImage": {
          "_id": Any<String>,
          "chunks": ArrayContaining [
            {
              "_id": Any<String>,
              "fileId": Any<String>,
              "x": Any<Number>,
              "y": Any<Number>,
            },
          ],
          "height": Any<Number>,
          "width": Any<Number>,
        },
        "name": "Earth",
        "pixelsPerFoot": Any<Number>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 set model color 1`] = `
{
  "data": {
    "setModelColor": ObjectContaining {
      "_id": Any<String>,
      "model": ObjectContaining {
        "_id": "32c2628c-e7cb-412f-a8e1-69eb979d6376",
      },
      "wiki": ObjectContaining {
        "_id": "45a380d4-a69b-40d2-9877-c51a8106ea01",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 set model position 1`] = `
{
  "data": {
    "setModelPosition": ObjectContaining {
      "_id": Any<String>,
      "model": ObjectContaining {
        "_id": "1627987f-4bfa-4083-804a-eba03d344cac",
      },
      "wiki": ObjectContaining {
        "_id": "4bbd1487-ef6a-429a-8c3a-85860560cca9",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 set model wiki 1`] = `
{
  "data": {
    "setPositionedModelWiki": ObjectContaining {
      "_id": Any<String>,
      "wiki": {
        "_id": "8383b085-7973-405f-81cb-5b535581630f",
        "name": "Earth",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user join existing game 1`] = `
{
  "data": {
    "joinGame": ObjectContaining {
      "_id": Any<String>,
      "characters": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "name": "Tester1",
        },
        ObjectContaining {
          "_id": Any<String>,
          "name": "Tester2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game add fog permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game add model permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game add stroke permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game delete model permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game game chat 1`] = `
{
  "data": {
    "gameChat": ObjectContaining {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game leave game 1`] = `
{
  "data": {
    "leaveGame": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game set character order permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game set game map permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game set model color permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game set model position permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game set model wiki permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with game hosted by tester1 as tester2 user join existing game 1`] = `
{
  "data": {
    "joinGame": ObjectContaining {
      "_id": Any<String>,
      "characters": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "name": "Tester1",
        },
        ObjectContaining {
          "_id": Any<String>,
          "name": "Tester2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with game hosted by tester1 as tester2 user while having joined a game game chat 1`] = `
{
  "data": {
    "gameChat": ObjectContaining {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with game hosted by tester1 as tester2 user while having joined a game leave game 1`] = `
{
  "data": {
    "leaveGame": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
